--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.2",
+    "react-csv-reader": "^1.2.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5"
   },
