--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "js-file-download": "^0.4.4",
     "react": "^16.8.2",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-csv-reader": "^1.2.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
