--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "import": "0.0.6",
     "js-file-download": "^0.4.4",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap-table-next": "^2.1.2",
+    "react-bootstrap-table2-editor": "^1.2.2",
+    "react-bootstrap-table2-paginator": "^2.0.2",
+    "react-bootstrap-table2-toolkit": "^1.2.2",
     "react-csv-reader": "^1.2.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5",
-    "react-table": "^6.9.2"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
