--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "import": "0.0.6",
     "js-file-download": "^0.4.4",
+    "node-gyp": "^3.8.0",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-bootstrap-table-next": "^2.1.2",
