--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "typescript": "^3.4.5",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "js-file-download": "^0.4.7",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
