--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "ventilation",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
-    "typescript": "^3.4.5",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0",
     "js-file-download": "^0.4.7",
+    "munkres-js": "1.2.2",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-bootstrap-table-next": "^3.1.3",
@@ -17,7 +18,7 @@
     "react-csv-reader": "^1.2.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "munkres-js": "1.2.2"
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
