--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-bootstrap-table2-editor": "^1.2.3",
     "react-bootstrap-table2-paginator": "^2.0.6",
     "react-bootstrap-table2-toolkit": "^2.0.0",
-    "react-csv-reader": "^1.2.2",
+    "react-csv-reader": "file:./deps/react-csv-reader",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "typescript": "^3.4.5"
