--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "homepage": ".",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "highcharts": "^7.1.2",
+    "eslint": "^6.3.0",
+    "highcharts": "^7.2.0",
     "highcharts-react-official": "^2.2.2",
     "jquery": "^3.4.1",
-    "js-file-download": "^0.4.7",
+    "js-file-download": "^0.4.8",
     "munkres-js": "1.2.2",
     "popper.js": "^1.15.0",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.8",
-    "react-bootstrap-table-next": "^3.1.3",
-    "react-bootstrap-table2-editor": "^1.2.3",
-    "react-bootstrap-table2-paginator": "^2.0.6",
-    "react-bootstrap-table2-toolkit": "^2.0.0",
+    "react-bootstrap-table-next": "^3.1.9",
+    "react-bootstrap-table2-editor": "^1.3.2",
+    "react-bootstrap-table2-paginator": "^2.0.8",
+    "react-bootstrap-table2-toolkit": "^2.0.1",
     "react-csv-reader": "file:./deps/react-csv-reader",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "typescript": "^3.4.5"
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.1",
+    "typescript": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
