--- a/deps/react-csv-reader/package.json
+++ b/deps/react-csv-reader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-csv-reader",
-  "version": "1.2.2",
+  "version": "1.3.1",
   "description": "React component that handles csv file input.",
   "main": "dist/react-csv-reader.js",
   "repository": "https://github.com/nzambello/react-csv-reader",
@@ -9,16 +9,16 @@
   "homepage": "https://github.com/nzambello/react-csv-reader#readme",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.5.0",
-    "babel-preset-react": "^6.24.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "webpack": "^2.5.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^4.2.3",
-    "prettier": "1.7.4"
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "husky": "^3.0.5",
+    "lint-staged": "^9.2.5",
+    "prettier": "1.18.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7"
   },
   "peerDependencies": {
     "prop-types": "*",
@@ -32,7 +32,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "papaparse": "^5.0.0"
+    "papaparse": "^5.0.2"
   },
   "lint-staged": {
     "*.{js,json,css}": [
