Add seed for random

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-csv-reader": "file:./deps/react-csv-reader",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "seedrandom": "^3.0.3",
     "typescript": "^3.6.2"
   },
   "scripts": {
